add appointment cancelling and get methods for appointments
